    @startuml
'https://plantuml.com/class-diagram
abstract class NhanVienF88{
 String ten, chucVu
 +{abstract} void duyetVay(int khoanVay)
 +{abstract} NhanVienF88 capTren(NhanVienF88 capTren)
}

class ChuTich
class NhanVienChoVay
NhanVienF88 <|-- ChuTich
NhanVienF88 <|-- NhanVienChoVay
NhanVienChoVay --> NhanVienF88: successor


@enduml